Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjText.quorum
Text t = cast(Text, "text")
output t:GetValue()