Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjTextObj.quorum
Text t
t:setValue("what?")
Boolean b = t